# sachverhalt-cli

./: LICENSE  README.md  Test.hs  sachverhalt-cli.cabal  shell.nix
src/Algorithms/: Dependant.hs
src/Sachverhalt/: Client.hs  Dependencies.hs
src/Sachverhalt/Client/: DefaultMain.hs  Monads.hs  Plugins.hs  Types.hs
